I made the button an image. I created victory screen and defeat screen.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RuleActivity"></activity>
+        <activity android:name=".DefeatActivity"></activity>
+        <activity android:name=".WinActivity" />
+        <activity android:name=".RuleActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".StartActivity">
             <intent-filter>
